Revert "Alter Filter to GMT Timezone - Initial Time From Analisys to GMT Timezone"

--- a/webapp/public/javascripts/angular/filter.html
+++ b/webapp/public/javascripts/angular/filter.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12" style="padding-top: 20px">
-    <terrama2-box title="i18n.__('Date (GMT time)')" css="cssBoxSolid">
+    <terrama2-box title="i18n.__('Date (local time)')" css="cssBoxSolid">
       <terrama2-filter-datetime-picker before-datetime="filter.date.beforeDate" after-datetime="filter.date.afterDate"></terrama2-filter-datetime-picker>
     </terrama2-box>
 
