feature: adding the attributes tab to dynamic data (occurrence)

--- a/helper/add_dynamic_data.html
+++ b/helper/add_dynamic_data.html
@@ -47,6 +47,7 @@
 
   <!-- Hnd styles -->
   <link href="css/layout.min.css" rel="stylesheet" />
+  <link href="css/scrolling-tabs.css" rel="stylesheet" />
   <link href="css/effects.min.css" rel="stylesheet" />
   <link href="css/theme-light-blue.min.css" rel="stylesheet" />
   <link href="css/print.min.css" rel="stylesheet" media="print" />
@@ -241,6 +242,7 @@
   <script src="vendors/imageMapResizer-1.0.7/imageMapResizer.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="vendors/bootstrap-3.4.0/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="vendors/js/scrolling-tabs.js"></script>
   
   <!-- Headroom -->
   <script src="vendors/headroom-0.9.4/headroom.min.js"></script>
