--- a/webapp/public/javascripts/angular/generalData.html
+++ b/webapp/public/javascripts/angular/generalData.html
@@ -7,6 +7,7 @@
         <select class="form-control"
                 name="semantics"
                 ng-model="dataSeries.semantics"
+                id="dataSerieField"
                 ng-options="i18n.__(semantics.name) for semantics in dataSeriesSemantics | filter: { data_series_type_name: '!ANALYSIS_MONITORED_OBJECT' }"
                 ng-disabled="isUpdating || semanticsSelected"
                 ng-change="onDataSemanticsChange();" required>
