--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -338,6 +338,27 @@
       </div>
     </wz-step>
 
+    <wz-step wz-title="{{ i18n.__('Attributes') }}" canexit="isSecondStepValid" wz-data="wizard.attributes" wz-disabled="{{ !showDynamicAttributes }}" canenter="!wizard.attributes.disabled">
+      <form name="forms.attributesForm"></form>
+        <attributes model="model.attributes" dataserie="dataSeries" provider="dataSeries.data_provider_id" table-name="model.table_name" ng-if="model.table_name!==undefined && dataSeries.data_provider_id!==undefined"></attributes>
+        <div class="col-md-12">
+            <div class="col-md-8" ng-show="model.attributes.length === 0 || model.attributes === undefined">
+              <p>Tabela não encontrada. Tabela deve ter pelo menos uma ocorrência coletada.</p>
+            </div>
+            <div class="col-md-12">
+              <div class="pull-left">
+                <a href="" class="btn btn-primary pull-left cancel-dynamic" ng-show="isDynamic">{{ i18n.__('Cancel') }}</a>
+                <a href="" class="btn btn-primary pull-left cancel-static" ng-show="!isDynamic">{{ i18n.__('Cancel') }}</a>
+              </div>
+              <div class="pull-right">
+                <button class="btn btn-primary" type="submit" wz-previous>{{ i18n.__('Previous') }}</button>
+                <button type="button" class="btn btn-primary" ng-show="isDynamic" data-ng-click="save(false);">{{ i18n.__('Save') }}</button>
+              </div>
+            </div>
+        </div>
+      </form>
+    </wz-step>
+
   </wizard>
 
   <script>
@@ -358,6 +379,7 @@
 
     $(".cancel-dynamic").attr("href", cancelDynamic);
     $(".cancel-static").attr("href", cancelStatic);
+
   </script>
 
 </div>
