Changed version on various files

--- a/helper/whats_new.html
+++ b/helper/whats_new.html
@@ -212,7 +212,7 @@
 </ul></ul>
 <p class="rvps19"><span class="rvts11"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
-<li style="margin-left: 0px; text-indent: 0px" class="rvps18"><span class="rvts26">Versão 4.1.1</span></li>
+<li style="margin-left: 0px; text-indent: 0px" class="rvps18"><span class="rvts26">Versão 4.1.2-develop</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 34px; list-style-position: outside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 34px; list-style-position: outside; list-style-type: circle;">
 <li style="margin-left: 0px" class="rvps19"><span class="rvts11">Mudança do filtro de dada para coleta de dados dinâmicos deve ser horário GMT;</span></li>
