Changed branch name

--- a/helper/Manual da plataforma TerraMA2.html
+++ b/helper/Manual da plataforma TerraMA2.html
@@ -197,7 +197,7 @@
 <p class="rvps9"><span class="rvts11">A TerraMA² é um software livre, podendo ser redistribuída e/ou modificada sob os termos da GNU Lesser General Public Licence versão 4 como publicado pela Free Software Foundation.</span></p>
 <p class="rvps9"><span class="rvts11">Comentários, sugestões ou relato de problemas podem ser enviados para a equipe da TerraMA² (terrama2@dpi.inpe.br) da Divisão de Processamento de Imagens (DPI) do Instituto Nacional de Pesquisas Espaciais (INPE).</span></p>
 <p class="rvps6"><span class="rvts14"><br/></span></p>
-<p class="rvps8"><span class="rvts15">Versão da TerraMA²: 4.1.2-develop</span><br/><span class="rvts15">Versão da TerraLib: 5.4.5</span><br/><span class="rvts15">Data da versão: 25/Agosto/2020</span></p>
+<p class="rvps8"><span class="rvts15">Versão da TerraMA²: b4.1.2-dev</span><br/><span class="rvts15">Versão da TerraLib: 5.4.5</span><br/><span class="rvts15">Data da versão: 25/Agosto/2020</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <p></p>
 
